# the-funky-wack-offbeat-engine

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
docker/: Dockerfile
offbeat/: __init__.py  config.py  logging.py  logging_utils.py  redis_client.py  schema.py  worker.py
offbeat/analysis/: __init__.py  global_analysis.py  per_track.py  track_detection.py
scripts/: bootstrap_venv.sh  pop_result.py  push_job.py  redis_check.py  run_worker.sh  smoke_test.py
tests/: conftest.py  test_global_analysis_poc.py  test_local_guide_tempo.py  test_schema.py  test_track_detection_poc.py  test_worker.py
