[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "the-funky-wack-offbeat-engine"
version = "0.1.0"
description = "The Offbeat Engine - Audio Analysis Microservice (scaffold + core infra)"
authors = [{name = "The Funky Wack Team"}]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pydantic==1.10.13",
    "redis==5.0.8",
    "loguru==0.7.2",
    "python-dotenv==1.0.1",
]

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "B"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = [
    "tests",
]
